add index.html and css files

--- a/index.html
+++ b/index.html
@@ -23,5 +23,17 @@
 
         </main>
     
-</body>
+</          body>
 </html>
+<main>
+    <!-- Sidebar section -->
+    <div>
+
+    </div>
+
+    <!-- Content section -->
+    <div>
+
+    </div>
+    - These will act as the two columns of our page - the sidebar and the main content, as noted by the comments we leave next to each. Once again, don't forget to include the comments!
+</main>88
