add index.html and css files

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </div>
                 <!--content section-->
                 <div class="content">
-                    <h2>  </h2>
-                    <p>  </p>
+                    <h2>Dominic</h2>
+                    <p>Student at ASA</p>
                     <!--Intrest section-->
                     <div id="interests">
                         <h3>Interests</h3>
