add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,7 +8,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(7, 39, 168);
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
@@ -16,7 +16,7 @@
 			position: absolute;
 			top: 100px;
 			left: 0px;  /* <--- Change me! */
-		}
+		}    
 		.board{
 			height: 100vh;
 		}
@@ -62,8 +62,9 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
-
+			var position=0;
+			var points=0;
+			var speed= 10
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -71,9 +72,15 @@
 			turn it around! 
 			*/
 			function update() {
-				
+				PositionX = position + speed
+				moveBoxTo(position);
+				if (PositionX > boardWidth);{
 
-			};
+				}
+				 if (PositionX < 0) {
+					speed = -speed;
+				 }
+				};
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
@@ -81,7 +88,10 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+				positionX = 0;
+				chzangeBoxText(points);
+				 points = points + 1;
+				 speed = speed + 3
 
 
 			};
