add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -62,9 +62,9 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			var position=0;
-			var points=0;
-			var speed= 10
+				var position= 0;
+			var points=1;
+			var speed= 10;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -78,7 +78,7 @@
 
 				}
 				 if (PositionX < 0) {
-					speed = -speed;
+					speed = -speed 9;
 				 }
 				};
 
